# testovoe_secunda

./: README.md
src/: .env_template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2025_09_28_1655-4cd675e9a5ea_create_all_table.py  2025_09_29_1716-2a274241b3e5_add_constraint_for_path_level_activity_.py  2025_09_29_1724-deebac672a20_create_gin_index_for_path.py
src/api/: __init__.py
src/api/v1/: __init__.py  activity.py  building.py  organization.py  search.py
src/core/: __init__.py  db_helper.py  lifespan.py  settings.py
src/core/auth/dependecies/: __init__.py  token_validate.py
src/core/exceptions/: __init__.py  activity.py  building.py  organization.py  search.py
src/core/models/: __init__.py  activity.py  base.py  building.py  m2m.py  organization.py  phone_number.py
src/core/models/mixins/: __init__.py  id_pk_int.py
src/core/schemas/: __init__.py  activity.py  base.py  building.py  organization.py  search.py
src/core/services/: __init__.py  activity.py  building.py  organization.py  search.py
src/repositories/: __init__.py  activity.py  building.py  organization.py
